# gmfilters

./: .gitignore  LICENSE  README.md  filters.py  gmailsvc.py  labels.py  main.py  pyproject.toml
